fix price impact alignment

--- a/src/pages/Swap/Swap.module.css
+++ b/src/pages/Swap/Swap.module.css
@@ -37,6 +37,11 @@
     height: auto;
     overflow-y: scroll;
 }
+.price_impact_container{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
 
 .price_impact {
     /* background-color: var(--dark2); */
@@ -183,4 +188,48 @@
 }
 .tutorial_button:hover {
     color: var(--text-grey-white);
+}
+
+
+.extra_row {
+    display: flex;
+    flex-direction: column;
+    padding: 5px 0;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.align_center {
+    display: flex;
+    flex-direction: row;
+
+    align-items: center;
+    gap: 5px;
+}
+
+@media only screen and (min-width: 700px) {
+    .align_center {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        gap: 5px;
+        text-align: start;
+    }
+    .extra_info_content {
+        padding: 0 2%;
+    }
+    .data {
+        text-align: end;
+    }
+
+    .extra_details {
+        padding: 0.1rem 1rem;
+    }
+    .price_impact {
+        padding: 0.1rem 1rem;
+    }
+
+    .extra_row {
+        flex-direction: row;
+    }
 }
